--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -26,16 +26,16 @@ jobs:
         uses: docker/login-action@v1
         with:
           registry: 100.100.103.167:5000
-          username: admin
-          password: dnflth
+          username: Secrets.NEXUS_ID
+          password: Secrets.NEXUS_PASSWORD
 
-      # - name: Build and push
-      #   uses: docker/build-push-action@v2
-      #   id: docker_build
-      #   with:
-      #     context: .
-      #     file: ./Dockerfile
-      #     push: true
-      #     tags: |
-      #       ghcr.io/${{ github.repository_owner }}/my-container-test:latest
-      #       ghcr.io/${{ github.repository_owner }}/my-container-test:${{ env.RELEASE_VERSION }}
+      - name: Build and push
+        uses: docker/build-push-action@v2
+        id: docker_build
+        with:
+          context: .
+          file: ./Dockerfile
+          push: true
+          tags: |
+            100.100.103.167:5000/kyh-test:latest
+            100.100.103.167:5000/kyh0test:${{ env.RELEASE_VERSION }}
