CI구성테스트

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -26,8 +26,8 @@ jobs:
         uses: docker/login-action@v1
         with:
           registry: 100.100.103.167:5000
-          username: Secrets.NEXUS_ID
-          password: Secrets.NEXUS_PASSWORD
+          username: ${{ secrets.NEXUS_ID }}
+          password: ${{ secrets.NEXUS_PASSWORD }}
 
       - name: Build and push
         uses: docker/build-push-action@v2
