CI구성테스트

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -36,7 +36,7 @@ jobs:
           context: .
           file: ./Dockerfile
           push: true
-          allow: security.insecure
+          allow: network.host,security.insecure
           tags: |
             100.100.103.167:5000/kyh-test:latest
             100.100.103.167:5000/kyh-test:${{ env.RELEASE_VERSION }}
