--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -21,6 +21,8 @@ jobs:
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
+        with:
+          driver: docker
 
       - name: Login to Docker Hub
         uses: docker/login-action@v1
@@ -36,7 +38,7 @@ jobs:
           context: .
           file: ./Dockerfile
           push: true
-          allow: network.host,security.insecure
+          allow: 100.100.103.167:5000
           tags: |
             100.100.103.167:5000/kyh-test:latest
             100.100.103.167:5000/kyh-test:${{ env.RELEASE_VERSION }}
