--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Login to Docker Hub
         uses: docker/login-action@v1
         with:
-          registry: 100.100.103.167:5000
+          registry: ${{ secrets.DOCKER_PRIVATE_REGISTRY }}
           username: ${{ secrets.NEXUS_ID }}
           password: ${{ secrets.NEXUS_PASSWORD }}
 
@@ -39,5 +39,20 @@ jobs:
           file: ./Dockerfile
           push: true
           tags: |
-            100.100.103.167:5000/kyh-test:latest
-            100.100.103.167:5000/kyh-test:${{ env.RELEASE_VERSION }}
+            ${{ secrets.DOCKER_PRIVATE_REGISTRY }}/kyh-test:latest
+            ${{ secrets.DOCKER_PRIVATE_REGISTRY }}/kyh-test:${{ env.RELEASE_VERSION }}
+
+      - name: checkout Config repository
+        uses: actions/checkout@v2
+        with:
+          repository: kyh0703/GitOpsApp
+          token: ${{ secrets.ACTION_TOKEN }}
+          path: /resource/helm/
+
+      - name: Commit And Push
+        run: |
+          sed -E 's/^(image[[:blank:]]*:[[:blank:]]*).*/\${{ secrets.DOCKER_PRIVATE_REGISTRY }}/kyh-test:${{ env.RELEASE_VERSION }}/' values.yaml
+          git config --global user.email "github-actions@github.com"
+          git config --global user.name "github-actions"
+          git commit -am "Update image tag"
+          git push -u origin master
