--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -47,9 +47,11 @@ jobs:
         with:
           repository: kyh0703/GitOpsApp
           token: ${{ secrets.ACTION_TOKEN }}
+          path: GitOpsApp
 
       - name: Commit And Push
         run: |
+          cd resource/helm
           sed -E 's/^(image[[:blank:]]*:[[:blank:]]*).*/\${{ secrets.DOCKER_PRIVATE_REGISTRY }}/kyh-test:${{ env.RELEASE_VERSION }}/' values.yaml
           git config --global user.email "github-actions@github.com"
           git config --global user.name "github-actions"
