--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -51,7 +51,8 @@ jobs:
 
       - name: Commit And Push
         run: |
-          cd resource/helm
+          ls -al
+          cd ./resource/helm
           sed -E 's/^(image[[:blank:]]*:[[:blank:]]*).*/\${{ secrets.DOCKER_PRIVATE_REGISTRY }}/kyh-test:${{ env.RELEASE_VERSION }}/' values.yaml
           git config --global user.email "github-actions@github.com"
           git config --global user.name "github-actions"
