--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -17,7 +17,8 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Set env
-        run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/v}" >> $GITHUB_ENV
+        run: |
+          echo "RELEASE_VERSION=${GITHUB_REF#refs/*/v}" >> $GITHUB_ENV
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
@@ -51,9 +52,9 @@ jobs:
 
       - name: Commit And Push
         run: |
-          ls -al
           cd ./GitOpsConfig/resource/helm
           sed -E 's/^(image[[:blank:]]*:[[:blank:]]*).*/\${{ secrets.DOCKER_PRIVATE_REGISTRY }}/kyh-test:${{ env.RELEASE_VERSION }}/' values.yaml
+          echo "sed -E 's/^(image[[:blank:]]*:[[:blank:]]*).*/\${{ secrets.DOCKER_PRIVATE_REGISTRY }}/kyh-test:${{ env.RELEASE_VERSION }}/' values.yaml"
           git config --global user.email "github-actions@github.com"
           git config --global user.name "github-actions"
           git commit -am "Update image tag"
