--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Login to Docker Hub
         uses: docker/login-action@v1
         with:
-          registry: ${{ secrets.DOCKER_PRIVATE_REGISTRY }}
+          registry: 100.100.103.167:5000
           username: ${{ secrets.NEXUS_ID }}
           password: ${{ secrets.NEXUS_PASSWORD }}
 
@@ -40,8 +40,8 @@ jobs:
           file: ./Dockerfile
           push: true
           tags: |
-            ${{ secrets.DOCKER_PRIVATE_REGISTRY }}/kyh-test:latest
-            ${{ secrets.DOCKER_PRIVATE_REGISTRY }}/kyh-test:${{ env.RELEASE_VERSION }}
+            100.100.103.167:5000/kyh-test:latest
+            100.100.103.167:5000/kyh-test:${{ env.RELEASE_VERSION }}
 
       - name: checkout Config repository
         uses: actions/checkout@v2
@@ -53,8 +53,8 @@ jobs:
       - name: Commit And Push
         run: |
           cd ./GitOpsConfig/resource/helm
-          echo "sed -E 's/^(image[[:blank:]]*:[[:blank:]]*).*/\${{ secrets.DOCKER_PRIVATE_REGISTRY }}/kyh-test:${{ env.RELEASE_VERSION }}/' values.yaml"
-          sed -E 's/^(image[[:blank:]]*:[[:blank:]]*).*/\${{ secrets.DOCKER_PRIVATE_REGISTRY }}/kyh-test:${{ env.RELEASE_VERSION }}/' values.yaml
+          echo "sed -E 's/^(image[[:blank:]]*:[[:blank:]]*).*/\100.100.103.167:5000/kyh-test:${{ env.RELEASE_VERSION }}/' values.yaml"
+          sed -E 's/^(image[[:blank:]]*:[[:blank:]]*).*/\100.100.103.167:5000/kyh-test:${{ env.RELEASE_VERSION }}/' values.yaml
           git config --global user.email "github-actions@github.com"
           git config --global user.name "github-actions"
           git commit -am "Update image tag"
