--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -47,6 +47,7 @@ jobs:
         uses: actions/checkout@v2
         with:
           repository: kyh0703/GitOpsConfig
+          ref: master
           token: ${{ secrets.ACTION_TOKEN }}
           path: GitOpsConfig
 
